--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,14 +6,27 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 22
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm test
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
 
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 22
-
       - name: Install dependencies
         run: npm ci
-
-      - name: Run tests
-        run: npm test
+      - name: Build project
+        run: npm run build
+      - name: Deploy to Vercel
+        run: echo "Deploying to Vercel..."
