--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,11 +10,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 22
-      - name: Install dependencies
+      - name: Install dependencies``
         run: npm ci
       - name: Run tests
         run: npm test
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get code
